--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5"
   }
 }
