--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "mongoose": "^8.3.0",
     "telegraf": "^4.16.3"
   }
 }
