--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "amqplib": "^0.10.4",
     "archiver": "^7.0.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
