--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "mongoose": "^8.3.3",
-    "redis": "^4.6.13",
+    "node-cron": "^3.0.3",
     "telegraf": "^4.16.3"
   }
 }
