--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "archiver": "^7.0.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mongoose": "^8.3.3",
     "node-cron": "^3.0.3",
     "telegraf": "^4.16.3"
