--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.3",
     "node-cron": "^3.0.3",
     "telegraf": "^4.16.3"
