♻️ Refactor code config mongo and rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,28 @@
+PORT=
+
 TELEGRAM_TOKEN=
-TELEGRAM_CHAT_ID=
-MONGO_URI=
-RABBITMQ_URI=
-REDIS_URI=
+TELEGRAM_LOG_CHAT_ID=
+TELEGRAM_BACKUP_CHAT_ID=
+
+LOG_API_URL=
+LOG_API_KEY=
+
+COUNT_ACCESS_API_URL=
+COUNT_ACCESS_API_KEY=
+
+SERVICES=
+
+DATABASE_MONGO_TYPE=
+DATABASE_MONGO_HOST=
+DATABASE_MONGO_PORT=
+DATABASE_MONGO_USERNAME=
+DATABASE_MONGO_PASSWORD=
+DATABASE_NAME=
+DATABASE_AUTH_SOURCE=
+
+RABBITMQ_HOST=
+RABBITMQ_VHOST=
+RABBITMQ_PORT=
+RABBITMQ_USERNAME=
+RABBITMQ_PASSWORD=
+RABBITMQ_TYPE=
